# 42_fillit

./: CMakeLists.txt  author
includes/: fillit.h
libft/src/char/: ft_isalnum.c
libft/src/conv/: ft_atoi.c  ft_itoa.c
libft/src/lines/: ft_getlines.c  get_next_line.c
libft/src/lst/: ft_lstadd.c  ft_lstat.c  ft_lstcount.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstremove.c  ft_lstrev.c
libft/src/mem/: ft_bzero.c  ft_memalloc.c
libft/src/put/: ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
libft/src/str/: ft_splitdel.c  ft_strcat.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strmerge.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c
libft/src/sys/: ft_die.c
src/: a.out  main.c  read.c
