cmake_minimum_required(VERSION 3.9)
project(42_fillit)

set(CMAKE_CXX_STANDARD 11)

add_executable(42_fillit
        includes/fillit.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/obj/char/ft_isalnum.o
        libft/obj/char/ft_isalpha.o
        libft/obj/char/ft_isascii.o
        libft/obj/char/ft_isdigit.o
        libft/obj/char/ft_isprint.o
        libft/obj/char/ft_iswhitespace.o
        libft/obj/char/ft_tolower.o
        libft/obj/char/ft_toupper.o
        libft/obj/conv/ft_atoi.o
        libft/obj/conv/ft_itoa.o
        libft/obj/lines/ft_countwords.o
        libft/obj/lines/ft_getlines.o
        libft/obj/lines/get_next_line.o
        libft/obj/lst/ft_lstadd.o
        libft/obj/lst/ft_lstat.o
        libft/obj/lst/ft_lstcount.o
        libft/obj/lst/ft_lstdel.o
        libft/obj/lst/ft_lstdelone.o
        libft/obj/lst/ft_lstiter.o
        libft/obj/lst/ft_lstmap.o
        libft/obj/lst/ft_lstnew.o
        libft/obj/lst/ft_lstremove.o
        libft/obj/lst/ft_lstrev.o
        libft/obj/math/ft_clamp.o
        libft/obj/math/ft_ilerp.o
        libft/obj/math/ft_lerp.o
        libft/obj/math/ft_lerpi.o
        libft/obj/math/ft_max.o
        libft/obj/math/ft_min.o
        libft/obj/mem/ft_abs.o
        libft/obj/mem/ft_bzero.o
        libft/obj/mem/ft_memalloc.o
        libft/obj/mem/ft_memccpy.o
        libft/obj/mem/ft_memchr.o
        libft/obj/mem/ft_memcmp.o
        libft/obj/mem/ft_memcpy.o
        libft/obj/mem/ft_memdel.o
        libft/obj/mem/ft_memmove.o
        libft/obj/mem/ft_memset.o
        libft/obj/put/ft_putchar.o
        libft/obj/put/ft_putchar_fd.o
        libft/obj/put/ft_putendl.o
        libft/obj/put/ft_putendl_fd.o
        libft/obj/put/ft_putnbr.o
        libft/obj/put/ft_putnbr_fd.o
        libft/obj/put/ft_putstr.o
        libft/obj/put/ft_putstr_fd.o
        libft/obj/str/ft_splitdel.o
        libft/obj/str/ft_strcat.o
        libft/obj/str/ft_strchr.o
        libft/obj/str/ft_strclr.o
        libft/obj/str/ft_strcmp.o
        libft/obj/str/ft_strcpy.o
        libft/obj/str/ft_strdel.o
        libft/obj/str/ft_strdup.o
        libft/obj/str/ft_strequ.o
        libft/obj/str/ft_striter.o
        libft/obj/str/ft_striteri.o
        libft/obj/str/ft_strjoin.o
        libft/obj/str/ft_strlcat.o
        libft/obj/str/ft_strlen.o
        libft/obj/str/ft_strmap.o
        libft/obj/str/ft_strmapi.o
        libft/obj/str/ft_strmerge.o
        libft/obj/str/ft_strncat.o
        libft/obj/str/ft_strncmp.o
        libft/obj/str/ft_strncpy.o
        libft/obj/str/ft_strnequ.o
        libft/obj/str/ft_strnew.o
        libft/obj/str/ft_strnstr.o
        libft/obj/str/ft_strrchr.o
        libft/obj/str/ft_strsplit.o
        libft/obj/str/ft_strstr.o
        libft/obj/str/ft_strsub.o
        libft/obj/str/ft_strtrim.o
        libft/obj/sys/ft_die.o
        libft/src/char/ft_isalnum.c
        libft/src/char/ft_isalpha.c
        libft/src/char/ft_isascii.c
        libft/src/char/ft_isdigit.c
        libft/src/char/ft_isprint.c
        libft/src/char/ft_iswhitespace.c
        libft/src/char/ft_tolower.c
        libft/src/char/ft_toupper.c
        libft/src/conv/ft_atoi.c
        libft/src/conv/ft_itoa.c
        libft/src/lines/ft_countwords.c
        libft/src/lines/ft_getlines.c
        libft/src/lines/get_next_line.c
        libft/src/lst/ft_lstadd.c
        libft/src/lst/ft_lstat.c
        libft/src/lst/ft_lstcount.c
        libft/src/lst/ft_lstdel.c
        libft/src/lst/ft_lstdelone.c
        libft/src/lst/ft_lstiter.c
        libft/src/lst/ft_lstmap.c
        libft/src/lst/ft_lstnew.c
        libft/src/lst/ft_lstremove.c
        libft/src/lst/ft_lstrev.c
        libft/src/math/ft_clamp.c
        libft/src/math/ft_ilerp.c
        libft/src/math/ft_lerp.c
        libft/src/math/ft_lerpi.c
        libft/src/math/ft_max.c
        libft/src/math/ft_min.c
        libft/src/mem/ft_abs.c
        libft/src/mem/ft_bzero.c
        libft/src/mem/ft_memalloc.c
        libft/src/mem/ft_memccpy.c
        libft/src/mem/ft_memchr.c
        libft/src/mem/ft_memcmp.c
        libft/src/mem/ft_memcpy.c
        libft/src/mem/ft_memdel.c
        libft/src/mem/ft_memmove.c
        libft/src/mem/ft_memset.c
        libft/src/put/ft_putchar.c
        libft/src/put/ft_putchar_fd.c
        libft/src/put/ft_putendl.c
        libft/src/put/ft_putendl_fd.c
        libft/src/put/ft_putnbr.c
        libft/src/put/ft_putnbr_fd.c
        libft/src/put/ft_putstr.c
        libft/src/put/ft_putstr_fd.c
        libft/src/str/ft_splitdel.c
        libft/src/str/ft_strcat.c
        libft/src/str/ft_strchr.c
        libft/src/str/ft_strclr.c
        libft/src/str/ft_strcmp.c
        libft/src/str/ft_strcpy.c
        libft/src/str/ft_strdel.c
        libft/src/str/ft_strdup.c
        libft/src/str/ft_strequ.c
        libft/src/str/ft_striter.c
        libft/src/str/ft_striteri.c
        libft/src/str/ft_strjoin.c
        libft/src/str/ft_strlcat.c
        libft/src/str/ft_strlen.c
        libft/src/str/ft_strmap.c
        libft/src/str/ft_strmapi.c
        libft/src/str/ft_strmerge.c
        libft/src/str/ft_strncat.c
        libft/src/str/ft_strncmp.c
        libft/src/str/ft_strncpy.c
        libft/src/str/ft_strnequ.c
        libft/src/str/ft_strnew.c
        libft/src/str/ft_strnstr.c
        libft/src/str/ft_strrchr.c
        libft/src/str/ft_strsplit.c
        libft/src/str/ft_strstr.c
        libft/src/str/ft_strsub.c
        libft/src/str/ft_strtrim.c
        libft/src/sys/ft_die.c
        libft/auteur
        libft/libft.a
        libft/libft.mk
        libft/LICENSE
        libft/Makefile
        libft/README.md
        src/main.c
        src/read.c
        author)
